Integrate blazor edi form in xaml view

--- a/BolWallet/Pages/CreateCodenamePage.razor
+++ b/BolWallet/Pages/CreateCodenamePage.razor
@@ -82,7 +82,7 @@
                     }
                     else
                     {
-                        <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary" OnClick="@(()=> App.Current.MainPage.Navigation.PushAsync(new Views.CreateEdiPage(CreateEdiViewModel)))">Submit</MudButton>
+                        <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary" OnClick="@(()=> createCodenameViewModel.SubmitCommand.Execute(null))">Submit</MudButton>
                     }
                 }
             </div>
