Integrate blazor generate wallet with password form in xaml view

--- a/BolWallet/Views/GenerateWalletWithPasswordPage.xaml
+++ b/BolWallet/Views/GenerateWalletWithPasswordPage.xaml
@@ -2,21 +2,13 @@
     x:Class="BolWallet.Views.GenerateWalletWithPasswordPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:controls1="clr-namespace:BolWallet.Controls"
-    xmlns:converters="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-    xmlns:localConverters="clr-namespace:BolWallet.Converters"
-    xmlns:models="clr-namespace:BolWallet.Models"
-    xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
-    x:Name="This"
+	xmlns:pages="clr-namespace:BolWallet.Pages"
     Title="Create your Wallet"
-    x:DataType="viewModels:GenerateWalletWithPasswordViewModel"
     BackgroundColor="{DynamicResource SecondaryColor}">
-	<Grid VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
-		<StackLayout>
-			<Entry Placeholder="Password" Text="{Binding Password}" PlaceholderColor="Black" IsPassword="True" WidthRequest="250" HeightRequest="50" BackgroundColor="#EDF2F7" TextColor="Black" Margin="0,0,0,10" />
-			<Label Text="{Binding PasswordErrorMessage}" TextColor="Red" FontSize="12" />
-			<Button Text="Submit" Command="{Binding SubmitCommand}" WidthRequest="100" HeightRequest="50" BackgroundColor="#4C51BF" CornerRadius="10" TextColor="White" Margin="0,10,0,0" />
-		</StackLayout>
-		<ActivityIndicator VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" IsRunning="{Binding IsLoading}" />
-	</Grid>
+	
+	<BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
+		<BlazorWebView.RootComponents>
+			<RootComponent Selector="#app" ComponentType="{x:Type pages:GenerateWalletWithPasswordPage}" />
+		</BlazorWebView.RootComponents>
+	</BlazorWebView>
 </ContentPage>
