--- a/BolWallet/Views/AccountPage.xaml
+++ b/BolWallet/Views/AccountPage.xaml
@@ -19,6 +19,11 @@
 			Order="Secondary"
 			Priority="0" 
 			Command="{Binding DownloadBolWalletCommand}"/>
+		<ToolbarItem 
+			Text="Download Edi Files"
+			Order="Secondary"
+			Priority="0" 
+			Command="{Binding DownloadEdiFilesCommand}"/>
 	</ContentPage.ToolbarItems>
 
 	<ScrollView>
