--- a/BolWallet/_Imports.razor
+++ b/BolWallet/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using System.Net.Http
 @using System.ComponentModel.DataAnnotations
 @using System.Linq;
+@using System.Reflection
 @using System.Globalization
 
 @using Microsoft.AspNetCore.Components.Forms
