Reset NIN field when changing the country in the Codename form

--- a/BolWallet/Pages/CreateCodenamePage.razor
+++ b/BolWallet/Pages/CreateCodenamePage.razor
@@ -163,7 +163,11 @@
         createCodenameViewModel.Codename = "";
 
         if (args.Field is MudAutocomplete<Country>)
-            await ninTextField.Validate();
+        {
+            await ninTextField.Clear();
+
+            ninTextField.ResetValidation();
+        }
 
         await InvokeAsync(() => StateHasChanged());
     }
