Adjust design for compatibility with dark mode

--- a/BolWallet/Resources/Styles/Styles.xaml
+++ b/BolWallet/Resources/Styles/Styles.xaml
@@ -171,7 +171,7 @@
     <Style TargetType="Picker">
         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource White}}" />
         <Setter Property="TitleColor" Value="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource Gray200}}" />
-        <Setter Property="BackgroundColor" Value="Transparent" />
+		<Setter Property="BackgroundColor" Value="#F5F5F5" />
         <Setter Property="FontFamily" Value="OpenSansRegular"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="VisualStateManager.VisualStateGroups">
