--- a/BolWallet/Pages/CreateEdiPage.razor
+++ b/BolWallet/Pages/CreateEdiPage.razor
@@ -6,6 +6,10 @@
 
 <MudThemeProvider />
 
+<MudOverlay @bind-Visible="isProgressBarVisible" DarkBackground="true">
+    <MudProgressCircular Color="Color.Primary" Style="height:170px;width:170px;" Indeterminate="true" />
+</MudOverlay>
+
 <MudGrid Style="padding:5px">
     <Virtualize Items="IdentificationDocuments" Context="edi">
         <MudItem xs="12" sm="12" md="12">
@@ -53,6 +57,7 @@
     };
 
     bool identityImported = false, drivingLicenceImported = false, passportImported = false;
+    private bool isProgressBarVisible = false;
 
     protected override async Task OnInitializedAsync()
     {
@@ -68,7 +73,15 @@
 
     private async Task Submit()
     {
+        isProgressBarVisible = true;
+
+        await InvokeAsync(() => StateHasChanged());
+
         await createEdiViewModel.SubmitCommand.ExecuteAsync(null);
+
+        isProgressBarVisible = false;
+
+        await InvokeAsync(() => StateHasChanged());
     }
 
     private async Task GetFile(string property)
