--- a/BolWallet/Views/MainWithAccountPage.xaml
+++ b/BolWallet/Views/MainWithAccountPage.xaml
@@ -200,7 +200,18 @@
 				</ListView>
 
 				<Label IsVisible="{Binding IsNotRegistered}"
-				Text="Your wallet is now set up. Please register your main address by clicking 'Register'. Continue to refresh until you are directed to the certification page."/>
+					Text="1. Your wallet is now set up. Please whitelist your Main Address first. Once this is complete, you can move on to the next step to Register."/>
+
+				<Button
+					IsVisible="{Binding IsNotRegistered}"
+					Command="{Binding WhitelistCommand}"
+											BackgroundColor="DarkSlateBlue"
+											TextColor="White"
+					HorizontalOptions="FillAndExpand"
+					Text="Whitelist your Main Address" />
+				
+				<Label IsVisible="{Binding IsNotRegistered}"
+					Text="2. Please register your main address by clicking 'Register'. Continue to refresh until you are directed to the certification page."/>
 
 				<Button
 				IsVisible="{Binding IsNotRegistered}"
